fix: fix scrollbars in safari

--- a/src/sass/_scrollbars.sass
+++ b/src/sass/_scrollbars.sass
@@ -4,6 +4,9 @@
 		width: 1.4rem
 		height: 1.4rem
 		background-color: transparent
+		
+	.wy-side-scroll::-webkit-scrollbar 
+		display: none
 	
 	*::-webkit-scrollbar-track 
 		&:vertical
